--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "zendframework/zend-diactoros": "^2.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "Zubr\\": "src/"
+        }
     }
 }
