--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
     "require": {
-        "zendframework/zend-diactoros": "^2.2"
+        "zendframework/zend-diactoros": "^2.2",
+        "php-http/guzzle6-adapter": "^2.0"
     },
     "autoload": {
         "psr-4": {
             "Zubr\\": "src/"
         }
+    },
+    "require-dev": {
+        "php-http/mock-client": "^1.3"
     }
 }
