--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     },
     "require-dev": {
-        "php-http/mock-client": "^1.3"
+        "php-http/mock-client": "^1.3",
+        "phpunit/phpunit": "^8.4"
     }
 }
