--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     },
     "require-dev": {
         "php-http/mock-client": "^1.3",
-        "phpunit/phpunit": "^8.4"
+        "phpunit/phpunit": "^8.4",
+        "phpbench/phpbench": "@dev"
     }
 }
