--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
+"config": {"secure-http": false},
+"repositories":[{"type":"composer", "url": "http://192.168.56.2:8081/repository/packagist/"}],
     "require": {
         "zendframework/zend-diactoros": "^2.2",
-        "php-http/guzzle6-adapter": "^2.0"
+        "php-http/guzzle6-adapter": "^2.0",
+        "psr/http-server-middleware": "^1.0"
     },
     "autoload": {
         "psr-4": {
